package main;

public interface InternetBrowser {
    void exibirPagina(String url);
    void adicionarNovaAba();
    void atualizarPagina();
}