package main;

public interface MusicPlayer {
    void tocar();
    void pausar();
    void selecionarMusica(String musica);
}
