package main;

public interface Telephone {
    void ligar(String numero);
    void atender();
    void iniciarCorreioVoz();
}
